--- a/portfolio.css
+++ b/portfolio.css
@@ -17,6 +17,7 @@
 }
 
 .welcome-banner {
+	background-image: url("https://images.pexels.com/photos/2132171/pexels-photo-2132171.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
 	width: 100%;
 	height: 1000px;
 	text-align: center;
