--- a/portfolio.css
+++ b/portfolio.css
@@ -1,84 +1,90 @@
 * {
-	margin: 0 auto;
-	font-size: 20px;
-	color: #ff4716;	
-	padding: 1px;
-	font-family: 'Comfortaa', sans-serif, cursive;
+    margin: 0 auto;
+    font-size: 20px;
+    color: #ff4716;
+    padding: 1px;
+    font-family: 'Comfortaa', sans-serif, cursive;
 }
 
 .navbar a {
-	padding: 50% 0 0 5%;
-	text-decoration: none;
-	margin: 50% 0 50% 0;
-	position: relative;
-	font-size: 1.5rem;
+    padding: 50% 0 0 5%;
+    text-decoration: none;
+    margin: 50% 0 50% 0;
+    position: relative;
+    font-size: 1.5rem;
 }
 
 .navbar {
-	background-color: #feeeeb;
+    background-color: #feeeeb;
 }
 
 .welcome-banner {
-	background-image: url("https://images.pexels.com/photos/2132171/pexels-photo-2132171.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
-	width: 100%;
-	height: 100vh;
-	text-align: center;
-	background-size: cover;
-	background-repeat: no-repeat;
+    background-image: url("https://images.pexels.com/photos/2132171/pexels-photo-2132171.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 h1 {
-	font-size: 2.5rem;
-	margin: 0 auto;
-	padding: 50px 0 200px 0;
-	color: #ffffff;
+    font-size: 2.5rem;
+    margin: 0 auto;
+    padding: 50px 0 200px 0;
+    color: #ffffff;
 }
 
 h2 {
-	text-align: center;
-	font-size: 1.5rem;
-	width: 100%;
+    text-align: center;
+    font-size: 1.5rem;
+    width: 100%;
 }
 
 .about-alt {
-	background-color: #feeeeb;
+    background-color: #feeeeb;
 }
 
 .about-me-container {
-	text-align:center;	
+    text-align: center;
 }
 
 .about-me-container img, .about-me-container p {
-	margin: 20px;
-	padding: 20px;
+    margin: 20px;
+    padding: 20px;
 }
 
 .projects {
-	display: flex;
-	flex-flow: row wrap;
-	background-color: #fef7ed;
-	justify-content: center;
+    display: flex;
+    flex-flow: row wrap;
+    background-color: #fef7ed;
+    justify-content: center;
+}
+
+img {
+    width: 400px;
+    height: auto;
 }
 
 .portfolio-container, .my-contacts {
-	display: flex;
-	flex-wrap: wrap;
-	text-align: center;
-	justify-content: space-evenly;
-	margin: 0 50px;	
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    justify-content: space-evenly;
+    margin: 0 50px;
 }
 
 .portfolio-container {
-	max-width: 300px;
+    max-width: 300px;
+    margin: 100px;
 }
 
 .portfolio-container img {
-	padding: 20px;
+    padding: 20px;
 }
 
 .contact-me {
-	border-top: 2px solid #ff4716;
-	background-color: #feeeeb;
+    border-top: 2px solid #ff4716;
+    background-color: #feeeeb;
 }
 
 .my-contacts i {
@@ -87,17 +93,17 @@ h2 {
 }
 
 body {
-	padding: 10px;
+    padding: 10px;
 }
 
 a {
-	text-decoration: none;
+    text-decoration: none;
 }
 
 @media screen and (max-width: 800px) {
-	.welcome-banner {
-		height: auto;	
-  }
+    .welcome-banner {
+        height: auto;
+    }
 }
 
 
