--- a/portfolio.css
+++ b/portfolio.css
@@ -1,71 +1,54 @@
 * {
     margin: 0 auto;
     font-size: 20px;
-    color: #ff4716;
+    color: #000;
     padding: 1px;
-    font-family: 'Comfortaa', sans-serif, cursive;
-}
-
-.navbar a {
-    padding: 50% 0 0 5%;
-    text-decoration: none;
-    margin: 50% 0 50% 0;
-    position: relative;
-    font-size: 1.5rem;
-}
-
-.navbar {
-    background-color: #feeeeb;
+    font-family: 'Abhaya Libre', sans-serif, cursive;
 }
 
 .welcome-banner {
-    background-image: url("https://images.pexels.com/photos/2132171/pexels-photo-2132171.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
-    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: nowrap;
+    text-align: left;
+}
+
+ul {
+    list-style-type: none;
+}
+
+.welcome-banner div {
+    padding: 15% 0 0 0;
+}
+
+.welcome-banner img {
+    margin: -10px 0 0 -10px;
     height: 100vh;
-    text-align: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+    width: 50%;
+    border-radius: 50%;
 }
 
 h1 {
     font-size: 2.5rem;
     margin: 0 auto;
     padding: 50px 0 200px 0;
-    color: #ffffff;
-}
-
-h2 {
-    text-align: center;
-    font-size: 1.5rem;
-    width: 100%;
-}
-
-.about-alt {
-    background-color: #feeeeb;
-}
-
-.about-me-container {
-    text-align: center;
-}
-
-.about-me-container img, .about-me-container p {
-    margin: 20px;
-    padding: 20px;
+    color: #000;
+    text-transform: uppercase;
 }
 
 .projects {
     display: flex;
     flex-flow: row wrap;
-    background-color: #fef7ed;
+    background-color: #ffffff;
     justify-content: center;
 }
 
-img {
+.project-thumbnails {
     width: 400px;
     height: auto;
 }
 
-.portfolio-container, .my-contacts {
+.portfolio-container {
     display: flex;
     flex-wrap: wrap;
     text-align: center;
@@ -81,19 +64,37 @@ img {
 .portfolio-container img {
     padding: 20px;
 }
+.topnav {
+    height: 10vh;
+}
 
-.contact-me {
-    border-top: 2px solid #ff4716;
-    background-color: #feeeeb;
+.topnav a {
+    float: left;
+    text-align: center;
+    padding: 14px 16px;
+    font-size: 17px;
+}
+
+.topnav-right {
+    float: right;
+}
+
+.my-contacts {
+    width : 100%;
+    height: 70vh;
+    border : 2px solid black;
+    display : flex;
+    justify-content : space-between;
+}
+.icon-container {
+    margin: 12%;
+    align-content: center;
 }
 
 .my-contacts i {
     font-family: 'FontAwesome';
     src: url("https://fontawesome.com/v5.15/icons/linkedin?style=brands");
-}
 
-body {
-    padding: 10px;
 }
 
 a {
