--- a/portfolio.css
+++ b/portfolio.css
@@ -3,7 +3,8 @@
     font-size: 20px;
     color: #000;
     padding: 1px;
-    font-family: 'Abhaya Libre', sans-serif, cursive;
+    /*font-family: sans-serif, cursive;*/
+    font-family: 'EB Garamond', serif;
 }
 
 .welcome-banner {
@@ -61,40 +62,77 @@ h1 {
     margin: 100px;
 }
 
-.portfolio-container img {
-    padding: 20px;
+.about-alt {
+    position: relative;
+    justify-content: center;
+    display: block;
+    text-align: center;
 }
+
+.about-alt h2 {
+    margin: 30px 0;
+    font-size: 40px;
+}
+
+.about-me-container {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin-right: -10px;
+}
+
+.about-me-container p {
+    width: 400px;
+    height: 400px;
+    background-color: #000000;
+    color: #ffffff;
+    padding: 40px;
+    margin-left: -300px;
+    margin-top: 100px;
+}
+
+
+
 .topnav {
-    height: 10vh;
+    height: 100px;
+    border-bottom: 2px solid #efefef;
 }
 
 .topnav a {
+    margin-top: 15px;
+    margin-left: 30px;
     float: left;
     text-align: center;
-    padding: 14px 16px;
-    font-size: 17px;
+    font-size: 50px;
 }
 
 .topnav-right {
     float: right;
 }
 
-.my-contacts {
-    width : 100%;
-    height: 70vh;
-    border : 2px solid black;
-    display : flex;
-    justify-content : space-between;
+.topnav-right a {
+    margin: 20px 30px 0 0;
+    font-size: 20px;
+    padding: 14px 16px;
+    border-bottom: 2px solid #efefef;
 }
-.icon-container {
-    margin: 12%;
-    align-content: center;
+
+
+.my-contacts {
+    margin: 5% 20% 0;
+    height: 40vh;
+    border-top: 2px solid #efefef;
+    border-bottom: 2px solid #efefef;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    font-size: 20px;
 }
 
 .my-contacts i {
+    font-size: 10rem;
     font-family: 'FontAwesome';
     src: url("https://fontawesome.com/v5.15/icons/linkedin?style=brands");
-
 }
 
 a {
@@ -104,6 +142,21 @@ a {
 @media screen and (max-width: 800px) {
     .welcome-banner {
         height: auto;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .topnav a {
+        font-size: 30px;
+    }
+
+    .topnav-right a {
+        font-size: 17px;
+    }
+
+    .my-contacts i {
+        font-size: 1rem;
+
     }
 }
 
