--- a/portfolio.css
+++ b/portfolio.css
@@ -57,6 +57,15 @@ h1 {
     margin: 0 50px;
 }
 
+figure h3 {
+    margin-bottom: 20px;
+    border-bottom: 2px solid #efefef;
+}
+
+figure button, figure p {
+    margin-top: 20px;
+}
+
 .portfolio-container {
     max-width: 300px;
     margin: 100px;
